FunctionalCare/src/main/java/FunctionalCareParser.java
// Generated from /home/jordan/IdeaProjects/FunctionalCare/FunctionalCare.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FunctionalCareParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, DATATYPEINT=29, DATATYPEBOOL=30, 
		DATATYPENULL=31, DATATYPEPARINT=32, DATATYPEPARBOOL=33, DATATYPEFUNC=34, 
		BOOL=35, ID=36, NUMBER=37, WS=38, COMMENTS=39, LPAREN=40, RPAREN=41;
	public static final int
		RULE_func = 0, RULE_mainFunc = 1, RULE_call = 2, RULE_cons = 3, RULE_def = 4, 
		RULE_nombreFuncion = 5, RULE_params = 6, RULE_param = 7, RULE_args = 8, 
		RULE_returnFunct = 9, RULE_expr = 10, RULE_funcionUsuario = 11, RULE_atom = 12, 
		RULE_atomnum = 13, RULE_atomid = 14, RULE_atombool = 15, RULE_atomnull = 16, 
		RULE_parfuntions1 = 17, RULE_parfuntions2 = 18, RULE_datatypes = 19, RULE_operatorsdos = 20, 
		RULE_operatorsuno = 21, RULE_operatorstres = 22, RULE_intop = 23, RULE_relationalop = 24, 
		RULE_logicoparity2 = 25, RULE_logicoparity1 = 26, RULE_logicoparity3 = 27, 
		RULE_parintfunc2 = 28, RULE_parintfunc1 = 29, RULE_parboolfunc2 = 30, 
		RULE_parboolfunc1 = 31;
	public static final String[] ruleNames = {
		"func", "mainFunc", "call", "cons", "def", "nombreFuncion", "params", 
		"param", "args", "returnFunct", "expr", "funcionUsuario", "atom", "atomnum", 
		"atomid", "atombool", "atomnull", "parfuntions1", "parfuntions2", "datatypes", 
		"operatorsdos", "operatorsuno", "operatorstres", "intop", "relationalop", 
		"logicoparity2", "logicoparity1", "logicoparity3", "parintfunc2", "parintfunc1", 
		"parboolfunc2", "parboolfunc1"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'main'", "'const'", "'def'", "','", "':'", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'and'", "'or'", 
		"'not'", "'if'", "'crearParInt'", "'appendParInt'", "'firstParInt'", "'lastParInt'", 
		"'crearParBool'", "'appendParBool'", "'firstParBool'", "'lastParBool'", 
		"'int'", "'bool'", "'null'", "'parInt'", "'parBool'", "'funcion'", null, 
		null, null, null, null, "'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "DATATYPEINT", "DATATYPEBOOL", "DATATYPENULL", 
		"DATATYPEPARINT", "DATATYPEPARBOOL", "DATATYPEFUNC", "BOOL", "ID", "NUMBER", 
		"WS", "COMMENTS", "LPAREN", "RPAREN"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FunctionalCare.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionalCareParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FuncContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FunctionalCareParser.EOF, 0); }
		public List<MainFuncContext> mainFunc() {
			return getRuleContexts(MainFuncContext.class);
		}
		public MainFuncContext mainFunc(int i) {
			return getRuleContext(MainFuncContext.class,i);
		}
		public List<DefContext> def() {
			return getRuleContexts(DefContext.class);
		}
		public DefContext def(int i) {
			return getRuleContext(DefContext.class,i);
		}
		public List<ConsContext> cons() {
			return getRuleContexts(ConsContext.class);
		}
		public ConsContext cons(int i) {
			return getRuleContext(ConsContext.class,i);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LPAREN) {
				{
				setState(67);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(64);
					mainFunc();
					}
					break;
				case 2:
					{
					setState(65);
					def();
					}
					break;
				case 3:
					{
					setState(66);
					cons();
					}
					break;
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainFuncContext extends ParserRuleContext {
		public List<TerminalNode> LPAREN() { return getTokens(FunctionalCareParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(FunctionalCareParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(FunctionalCareParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(FunctionalCareParser.RPAREN, i);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public MainFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterMainFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitMainFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitMainFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainFuncContext mainFunc() throws RecognitionException {
		MainFuncContext _localctx = new MainFuncContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainFunc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(LPAREN);
			setState(75);
			match(T__0);
			setState(76);
			match(LPAREN);
			setState(77);
			match(RPAREN);
			setState(78);
			call();
			setState(79);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(FunctionalCareParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(FunctionalCareParser.RPAREN, 0); }
		public CallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallContext call() throws RecognitionException {
		CallContext _localctx = new CallContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(LPAREN);
			setState(82);
			expr();
			setState(83);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConsContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(FunctionalCareParser.LPAREN, 0); }
		public TerminalNode ID() { return getToken(FunctionalCareParser.ID, 0); }
		public ReturnFunctContext returnFunct() {
			return getRuleContext(ReturnFunctContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(FunctionalCareParser.RPAREN, 0); }
		public ConsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cons; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterCons(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitCons(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitCons(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConsContext cons() throws RecognitionException {
		ConsContext _localctx = new ConsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cons);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(LPAREN);
			setState(86);
			match(T__1);
			setState(87);
			match(ID);
			setState(88);
			returnFunct();
			setState(89);
			call();
			setState(90);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefContext extends ParserRuleContext {
		public List<TerminalNode> LPAREN() { return getTokens(FunctionalCareParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(FunctionalCareParser.LPAREN, i);
		}
		public NombreFuncionContext nombreFuncion() {
			return getRuleContext(NombreFuncionContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public List<TerminalNode> RPAREN() { return getTokens(FunctionalCareParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(FunctionalCareParser.RPAREN, i);
		}
		public ReturnFunctContext returnFunct() {
			return getRuleContext(ReturnFunctContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public DefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefContext def() throws RecognitionException {
		DefContext _localctx = new DefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(LPAREN);
			setState(93);
			match(T__2);
			setState(94);
			match(LPAREN);
			setState(95);
			nombreFuncion();
			setState(96);
			match(LPAREN);
			setState(97);
			params();
			setState(98);
			match(RPAREN);
			setState(99);
			returnFunct();
			setState(100);
			match(RPAREN);
			setState(101);
			call();
			setState(102);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NombreFuncionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(FunctionalCareParser.ID, 0); }
		public NombreFuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombreFuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterNombreFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitNombreFuncion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitNombreFuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NombreFuncionContext nombreFuncion() throws RecognitionException {
		NombreFuncionContext _localctx = new NombreFuncionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nombreFuncion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(106);
				param();
				setState(108);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(107);
					match(T__3);
					}
				}

				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(FunctionalCareParser.ID, 0); }
		public DatatypesContext datatypes() {
			return getRuleContext(DatatypesContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(ID);
			setState(116);
			match(T__4);
			setState(117);
			datatypes();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_args);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			switch (_input.LA(1)) {
			case DATATYPENULL:
			case BOOL:
			case ID:
			case NUMBER:
				{
				setState(119);
				atom();
				}
				break;
			case LPAREN:
				{
				setState(120);
				call();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnFunctContext extends ParserRuleContext {
		public ReturnFunctContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnFunct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterReturnFunct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitReturnFunct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitReturnFunct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnFunctContext returnFunct() throws RecognitionException {
		ReturnFunctContext _localctx = new ReturnFunctContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_returnFunct);
		try {
			setState(130);
			switch (_input.LA(1)) {
			case LPAREN:
			case RPAREN:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case DATATYPEINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				match(DATATYPEINT);
				}
				break;
			case DATATYPEBOOL:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				match(DATATYPEBOOL);
				}
				break;
			case DATATYPENULL:
				enterOuterAlt(_localctx, 4);
				{
				setState(126);
				match(DATATYPENULL);
				}
				break;
			case DATATYPEPARINT:
				enterOuterAlt(_localctx, 5);
				{
				setState(127);
				match(DATATYPEPARINT);
				}
				break;
			case DATATYPEPARBOOL:
				enterOuterAlt(_localctx, 6);
				{
				setState(128);
				match(DATATYPEPARBOOL);
				}
				break;
			case DATATYPEFUNC:
				enterOuterAlt(_localctx, 7);
				{
				setState(129);
				match(DATATYPEFUNC);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public OperatorsdosContext operatorsdos() {
			return getRuleContext(OperatorsdosContext.class,0);
		}
		public List<ArgsContext> args() {
			return getRuleContexts(ArgsContext.class);
		}
		public ArgsContext args(int i) {
			return getRuleContext(ArgsContext.class,i);
		}
		public OperatorsunoContext operatorsuno() {
			return getRuleContext(OperatorsunoContext.class,0);
		}
		public OperatorstresContext operatorstres() {
			return getRuleContext(OperatorstresContext.class,0);
		}
		public Parfuntions1Context parfuntions1() {
			return getRuleContext(Parfuntions1Context.class,0);
		}
		public Parfuntions2Context parfuntions2() {
			return getRuleContext(Parfuntions2Context.class,0);
		}
		public FuncionUsuarioContext funcionUsuario() {
			return getRuleContext(FuncionUsuarioContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr);
		int _la;
		try {
			setState(158);
			switch (_input.LA(1)) {
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				operatorsdos();
				setState(133);
				args();
				setState(134);
				args();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				operatorsuno();
				setState(137);
				args();
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				operatorstres();
				setState(140);
				args();
				setState(141);
				args();
				setState(142);
				args();
				}
				break;
			case T__22:
			case T__23:
			case T__26:
			case T__27:
				enterOuterAlt(_localctx, 4);
				{
				setState(144);
				parfuntions1();
				setState(145);
				args();
				}
				break;
			case T__20:
			case T__21:
			case T__24:
			case T__25:
				enterOuterAlt(_localctx, 5);
				{
				setState(147);
				parfuntions2();
				setState(148);
				args();
				setState(149);
				args();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 6);
				{
				setState(151);
				funcionUsuario();
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DATATYPENULL) | (1L << BOOL) | (1L << ID) | (1L << NUMBER) | (1L << LPAREN))) != 0)) {
					{
					{
					setState(152);
					args();
					}
					}
					setState(157);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionUsuarioContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(FunctionalCareParser.ID, 0); }
		public FuncionUsuarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionUsuario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterFuncionUsuario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitFuncionUsuario(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitFuncionUsuario(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncionUsuarioContext funcionUsuario() throws RecognitionException {
		FuncionUsuarioContext _localctx = new FuncionUsuarioContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_funcionUsuario);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public AtomnumContext atomnum() {
			return getRuleContext(AtomnumContext.class,0);
		}
		public AtomidContext atomid() {
			return getRuleContext(AtomidContext.class,0);
		}
		public AtomboolContext atombool() {
			return getRuleContext(AtomboolContext.class,0);
		}
		public AtomnullContext atomnull() {
			return getRuleContext(AtomnullContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionalCareListener ) ((FunctionalCareListener)listener).exitAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionalCareVisitor ) return ((FunctionalCareVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}
